--- a/1-3Types-CSS.html
+++ b/1-3Types-CSS.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
     <style>
       h3 {
-        color: red;
+        color: rgb(255, 0, 0);
         background: black;
       }
       h6 {
