--- a/25.Color.html
+++ b/25.Color.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .box{
+            height: 150px;
+            width: 150px;
+            background: rgb(237, 68, 68);
+        }
+    </style>
 </head>
 <body>
+    <h1>Color</h1>
+    <div class="box"></div>
     
 </body>
 </html>
